# nameko-ui

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
example_service/: config.yaml
examples/: README.md  service.py
src/: .env.sample  main.py  run_dev_server.sh  service.py  service_inspector.py
src/templates/: base.html  index.html  rpcs.html  select_service.html
